# TimetableApp

./: .gitmodules  Makefile
rust/: Cargo.toml  Makefile.toml  build.rs  rustfmt.toml  uniffi.toml
rust/src/: lib.rs  main.rs  timetable.udl  util.rs
