[package]
name = "timetable-app"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "uniffi-bindgen"
path = "uniffi-bindgen.rs"

[lib]
crate-type = ["staticlib", "cdylib"]

[dependencies]
uniffi = { version = "0.23.0", features = [ "cli" ] }
reqwest = { version = "0.11.17", features = [ "cookies" ]}
tokio = {version = "1.28.1", features = [ "macros", "rt-multi-thread" ] }
color-eyre = "0.6.2"

[build-dependencies]
uniffi = { version = "0.23.0", features = [ "build" ] }
